--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Kdam+Thmor+Pro&family=PT+Sans+Narrow&family=Titan+One&family=Staatliches&display=swap" rel="stylesheet">
-    <title>PortFolio de Pablo Rodríguez</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Kdam+Thmor+Pro&family=PT+Sans+Narrow&family=Titan+One&family=Staatliches&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="keyword" content="Pablo Rodríguez,  ">
+  <meta name="description" content="Portafolio de Pablo Rodríguez, desarrollador web.">
+  <title>PortFolio de Pablo Rodríguez</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
