--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Kdam+Thmor+Pro&family=PT+Sans+Narrow&family=Titan+One&family=Staatliches&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <meta name="keyword" content="Pablo Rodríguez,  ">
   <meta name="description" content="Portafolio de Pablo Rodríguez, desarrollador web.">
   <title>PortFolio de Pablo Rodríguez</title>
