More designs to add

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <meta name="keyword" content="Pablo Rodríguez,  ">
   <meta name="description" content="Portafolio de Pablo Rodríguez, desarrollador web.">
+  <link rel="shortcut icon" href="src/assets/favicon.png" type="image/x-icon">
   <title>PortFolio de Pablo Rodríguez</title>
 </head>
 
